--- a/public/index.html
+++ b/public/index.html
@@ -2,54 +2,70 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/avatar.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Story+Script&display=swap"
       rel="stylesheet"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+
+    <!-- SEO Meta -->
+    <title>Hadil Meddeb | Fullstack JS Developer Portfolio</title>
+    <meta
+      name="title"
+      content="Hadil Meddeb | Fullstack JS Developer Portfolio"
+    />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Explore the portfolio of Hadil Meddeb — Fullstack JavaScript Developer specializing in modern web apps, cloud, and DevOps."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://your-portfolio-link.com/" />
+    <meta
+      property="og:title"
+      content="Hadil Meddeb | Fullstack JS Developer Portfolio"
+    />
+    <meta
+      property="og:description"
+      content="Explore the portfolio of Hadil Meddeb — Fullstack JavaScript Developer specializing in modern web apps, cloud, and DevOps."
+    />
+    <meta
+      property="og:image"
+      content="assets\hero-section\avatar.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://your-portfolio-link.com/" />
+    <meta
+      property="twitter:title"
+      content="Hadil Meddeb | Fullstack JS Developer Portfolio"
+    />
+    <meta
+      property="twitter:description"
+      content="Explore the portfolio of Hadil Meddeb — Fullstack JavaScript Developer specializing in modern web apps, cloud, and DevOps."
+    />
+    <meta
+      property="twitter:image"
+      content="https://your-portfolio-link.com/preview-image.png"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="title" content="Hadil Meddeb Portfolio" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Hadil Meddeb Portfolio" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <title>Hadil Meddeb Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
